--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1898,6 +1898,8 @@
 	button,
 	.button {
 		position: relative;
+		margin-left: auto;
+		margin-right: auto;
 		display: inline-block;
 		border-radius: 0.35em;
 		color: #fff !important;
@@ -2162,7 +2164,8 @@
 
 			#main > section.one {
 				background-color: #81918E;
-				background-image: url("../../images/banner.jpg");
+
+
 			}
 
 			#main > section.two {
